--- a/manifests/base/namespace.yaml
+++ b/manifests/base/namespace.yaml
@@ -2,3 +2,11 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: gitops-admin-plugin
+  labels:
+    pod-security.kubernetes.io/enforce: restricted
+    pod-security.kubernetes.io/enforce-version: latest
+    pod-security.kubernetes.io/warn: restricted
+    pod-security.kubernetes.io/warn-version: latest
+    pod-security.kubernetes.io/audit: restricted
+    pod-security.kubernetes.io/audit-version: latest
+    
