--- a/manifests/components/plugin-patcher/kustomization.yaml
+++ b/manifests/components/plugin-patcher/kustomization.yaml
@@ -1,5 +1,5 @@
-apiVersion: kustomize.config.k8s.io/v1beta1
-kind: Kustomization
+apiVersion: kustomize.config.k8s.io/v1alpha1
+kind: Component
 
 namespace: gitops-admin-plugin
 
@@ -9,9 +9,7 @@ commonLabels:
   app.kubernetes.io/name: gitops-admin-plugin
 
 resources:
-- console-plugin.yaml
-- namespace.yaml
-- configmap.yaml
-- plugin-deploy.yaml
-- plugin-svc.yaml
-- pdb.yaml
+- plugin-patcher-sa.yaml
+- plugin-patcher-cluster-role.yaml
+- plugin-patcher-cluster-rolebinding.yaml
+- plugin-patcher-job.yaml
