--- a/manifests/overlays/install-gitops/kustomization.yaml
+++ b/manifests/overlays/install-gitops/kustomization.yaml
@@ -9,9 +9,7 @@ commonLabels:
   app.kubernetes.io/name: gitops-admin-plugin
 
 resources:
-- console-plugin.yaml
-- namespace.yaml
-- configmap.yaml
-- plugin-deploy.yaml
-- plugin-svc.yaml
-- pdb.yaml
+- ../../base
+components:
+ - ../../components/network-policy # Policy is not written for plugin-patcher.
+
