--- a/manifests/overlays/install/kustomization.yaml
+++ b/manifests/overlays/install/kustomization.yaml
@@ -1,3 +1,6 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
 namespace: gitops-admin-plugin
 
 commonLabels:
@@ -7,7 +10,7 @@ commonLabels:
 
 resources:
 - ../../base
-- plugin-patcher-sa.yaml
-- plugin-patcher-cluster-role.yaml
-- plugin-patcher-cluster-rolebinding.yaml
-- plugin-patcher-job.yaml
+components:
+  - ../../components/plugin-patcher # Comment out if you define plugins via Code (Recommended)
+ # - ../../components/network-policy # Policy is not written for plugin-patcher.
+
