Add labels to long-job manifest

--- a/test/apps/long/manifests/long-job.yaml
+++ b/test/apps/long/manifests/long-job.yaml
@@ -4,6 +4,8 @@ metadata:
   annotations:
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
+  labels:
+    test: reconcile
   name: long-job
 spec:
   suspend: false
