--- a/test/apps/long/manifests/long-job.yaml
+++ b/test/apps/long/manifests/long-job.yaml
@@ -8,7 +8,7 @@ metadata:
     test: reconcile
   name: long-job
 spec:
-  suspend: false
+  suspend: true
   template:
     metadata:
       labels:
