--- a/test/apps/long/manifests/kustomization.yaml
+++ b/test/apps/long/manifests/kustomization.yaml
@@ -1,5 +1,5 @@
 namespace: demo
 
 resources:
-- github.com/gitops-examples/simple-app-example
+#- github.com/gitops-examples/simple-app-example
 - long-job.yaml
